2.3/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx-multitool
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool
        #env:
        #- name: HTTP_PORT
        #  value: "8801"
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: ngnix-svc
spec:
  selector:
    app: nginx
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
